# emphasoft_project

./: .gitignore  Procfile  README.md  launcher.bat  manage.py  requirements.txt  run.bat
auth_app/: pipeline.py  urls.py
auth_app/management/commands/: fill_db.py
auth_app/migrations/: 0001_initial.py
auth_app/templates/auth_app/: base.html  info.html  login.html
emphasoft/: pyproject.toml
emphasoft/emphasoft/: clean_db.py
emphasoft/emphasoft/auth_app/: admin.py  apps.py  context_processors.py  models.py  pipeline.py  urls.py  views.py
emphasoft/emphasoft/auth_app/management/commands/: fill_db.py  update_db.py
emphasoft/emphasoft/auth_app/migrations/: 0001_initial.py
emphasoft/emphasoft/auth_app/templates/auth_app/: info.html  login.html
emphasoft/emphasoft/auth_app/templates/auth_app/includes/: logout_button.html
emphasoft/emphasoft/core/: base_settings.py  production_settings.py  settings.py  settings_deprecated.py  urls.py
emphasoft/emphasoft/static/css/: bootstrap_4_3_1.min.css
emphasoft_project/: asgi.py  base_settings.py  clean_db.py  launcher.bat  production_settings.py  settings.py  urls.py  wsgi.py
emphasoft_project/auth_app/: admin.py  context_processors.py
emphasoft_project/auth_app/migrations/: 0001_initial.py
emphasoft_project/auth_app/templates/auth_app/includes/: logout_button.html
static/css/: bootstrap_3_3_7.min.css  custom_style.css
static/js/: basket_scripts.js  bootstrap_4_3_1.min.js
